<resources>
    <string name="app_name">Group5-BookHub</string>
    <string name="splashWelcome">Welcome to BookHub</string>
    <string name="txtLogin">Login</string>
    <string name="imgLogin">Login Image</string>
    <string name="txtSignInToContinue">Please Sign in to continue</string>
    <string name="txtLoginHint">Email</string>
    <string name="txtPasswordHint">Password</string>
    <string name="btnSignIn">Sign In</string>
    <string name="tvAccountLogin">Don\'t have an account?</string>
    <string name="tvLoginSignUp">Sign Up</string>
    <string name="tvRegister">Register</string>
    <string name="tvRegisterToLogin">Please register to login.</string>
    <string name="txtName">Name</string>
    <string name="txtAddress">Address</string>
    <string name="txtPhone">Phone Number</string>
    <string name="txtRePassword">Re-enter Password</string>
    <string name="tvHaveAccount">Already have an account?</string>
    <string name="tvBookHub">Book Hub</string>
    <string name="btnMainBuyBook">Buy a Book</string>
    <string name="btnMainSellBook">Sell a Book</string>
    <string name="btnMainOrder">Order Details</string>
    <string name="btnMainProfile">User Profile</string>
    <string name="imgUser">User profile image</string>
    <string name="tvUserAddress">Address</string>
    <string name="tvUserPhone">Phone</string>
    <string name="tvUserEmail">Email</string>
    <string name="btnEditProfile">Edit Profile</string>
    <string name="btnLogout">Logout</string>
    <string name="title_activity_book_details">BookDetails</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tabBuy">Buy</string>
    <string name="tabSell">Sell</string>
    <string name="tabOrder">Order</string>
    <string name="tabProfile">Profile</string>
    <string name="tvBookTitle">ABC Book</string>
    <string name="imgBook">Book</string>
    <string name="tvPrice">Price: </string>
    <string name="tvDesc">Description:</string>
    <string name="tvAuthor">Author:</string>
    <string name="tvSeller">Seller:</string>
    <string name="btnBuy">Buy</string>
    <string name="btnLike">Like</string>
    <string name="tvPriceSample">$20</string>
    <string name="tvDescSample">A man is found on the street and taken to the hospital.</string>
    <string name="tvSampleAuthor">John Doe</string>
    <string name="tvSampleSeller">Aaron</string>
    <string name="tvTitleSell">Sell a Book</string>
    <string name="hintTitle">Title</string>
    <string name="hintDescription">Description</string>
    <string name="hintPrice">Price</string>
    <string name="hintCategory">Select Category</string>
    <string-array name="groupCategory">
        <item>Fiction and Literature</item>
        <item>Nonfiction</item>
        <item>Kids</item>
    </string-array>
    <string name="btnUploadImg">Upload Image</string>
    <string name="rdForSale">For Sale</string>
    <string name="rdShare">Share</string>
    <string name="btnAddBook">Add Book</string>
    <string name="btnEditUser">Update</string>
    <string name="sampleUserNameHint">Gayali Methmini</string>
    <string name="sampleUserAddressHint">19022 119B Ave New West</string>
    <string name="sampleUserPhoneHint">6048489812</string>
    <string name="sampleUserEmailHint">gayali.9812@gmail.com</string>
    <string name="tvTitleDelivery">Delivery Details</string>
    <string name="btnOrder">Order</string>
    <string name="btnCancel">Cancel</string>
    <string name="image">image</string>
    <string name="tvTitleHistory">Order History</string>
    <string name="tvBookBought">Books Bought</string>
    <string name="tvStatus">Status</string>
    <string name="tvBookSold">Books Sold</string>
    <string name="btnEditOrdHis">Edit</string>
    <string name="tvOrdHisStatus">Status :</string>
    <string name="tvOrdHisAddress">Address :</string>
    <string name="tvOrdHisDate">Date :</string>
    <string name="tvOrdHisPrice">Price :</string>
    <string name="sampleHintEditOrderHisBuyer">28055 150 Blakely Avenue New West Minister</string>
    <string name="btnMarkAsDel">Mark as Delivered</string>
</resources>